# bevy_webgate

./: .gitignore  Cargo.toml  README.md
docs/: multi_port.md
examples/: crud_app.rs  dynamic_config.rs  file_server.rs  graceful_shutdown.rs  hello_world.rs  inspector.rs  multi_ip_port.rs  single_port.rs
examples/file_server_assets/: app.js  data.json  index.html  style.css
src/: app_ext.rs  error.rs  lib.rs  main.rs  other.html  other.rs  prelude.rs  static_assets.rs  tests.rs  utils.rs
src/error/: http.rs  mod.rs
src/server/: connection_tracker.rs  manager.rs  mod.rs  port.rs  status.rs  task_store.rs
