[package]
name = "bevy_webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["serialize"] }
bevy_defer = { path = "../bevy_defer"}
hyper = { version = "1.1.0", features = ["server", "http1"] }
anyhow = "1.0.95"
async-io = "2.4.0"
smol-hyper = { version = "0.1.1" }
http-body-util = "0.1"
hyper-util = "0.1.10"
tower = "0.5.2"
axum = "0.8.1"
smol-axum = { path = "../smol-axum" }
tower-service = "0.3.3"
async-executor = "1.13.1"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
serde-this-or-that = "0.5.0"
fjall = "2.6.0"
bevy-trait-query = "0.7.0"
bincode = "1.3.3"
bevy_easy_database = "0.1.0"