[package]
name = "bevy_webserver"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Malek <pocmalek@gmail.com>",
    "Mikhail Ziablitskii <aggyomfg@yandex.com>",
]
description = "A web server integration for the Bevy game engine that allows you to easily append a webserver to Bevy."
readme = "README.md"
repository = "https://github.com/MalekiRe/bevy_webserver"

[dependencies]
bevy_app = "0.16.0"
bevy_log = "0.16.0"
bevy_ecs = "0.16.0"
bevy_tasks = "0.16.0"
bevy_derive = "0.16.0"
bevy_defer = { version = "0.14.0", default-features = false }
hyper = { version = "1.1.0", features = ["server", "http1"] }
async-io = "2.4.0"
smol-hyper = { version = "0.1.1" }
http-body-util = "0.1"
hyper-util = "0.1.10"
axum = "0.8.1"
tower-service = "0.3.3"
tower-http = "0.6"
mime_guess = "2.0"
serde_json = "1.0"
anyhow = "1.0.95"
tower = "0.5.2"
async-executor = "1.13.1"
dashmap = "6.1.0"
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.16.0", features = ["serialize"] }
bevy_easy_database = "0.2.0"
maud = "0.27.0"
serde = { version = "1.0.217", features = ["default"] }
serde_json = "1.0.138"
